--- a/src/index.html
+++ b/src/index.html
@@ -152,7 +152,15 @@
             die. next year. Hopefully we don't die and there will be a second
             album. I don't know when it will be, but it may come"
           </p>
-          <a class="buy-online" href="#">Buy online</a>
+          <a class="buy-online" href="#">
+            <span>Buy online</span>
+            <svg class="button-icon">
+              <use
+                href="img/svg/SVG-sprite.svg#right-chevron"
+                xlink:href="img/svg/SVG-sprite.svg#right-chevron"
+              ></use>
+            </svg>
+          </a>
         </div>
       </section>
 
@@ -166,7 +174,7 @@
             and It's Time, both extended plays preceding Night Visions' release.
           </p>
         </header>
-        <ul class="latter-compositions-release list">
+        <ul class="latter-compositions-release">
           <li class="latter-compositions-item">
             <div class="latter-compositions-wrapper">
               <span class="latter-compositions-year">03.04.2015</span>
@@ -183,20 +191,54 @@
               </p>
               <div class="latter-button-icons">
                 <button class="latter-compositions-button">
-                  Visit the iTunes
+                  <span>Visit the iTunes</span>
+                  <svg class="button-icon">
+                    <use
+                      href="img/svg/SVG-sprite.svg#right-chevron"
+                      xlink:href="img/svg/SVG-sprite.svg#right-chevron"
+                    ></use>
+                  </svg>
                 </button>
-                <ul class="latter-compositions-icons list">
-                  <li class="latter-compositions-icons icons-audio">
+
+                <ul class="latter-compositions-list">
+                  <li class="latter-compositions-icons">
+                    <svg class="icon">
+                      <use
+                        href="img/svg/SVG-sprite.svg#speaker"
+                        xlink:href="img/svg/SVG-sprite.svg#speaker"
+                      ></use>
+                    </svg>
                     <span class="icons-audio-descr">182,364</span>
                   </li>
-                  <li class="latter-compositions-icons icons-heart">
-                    <a href="#"></a> <span class="icons-heart-descr">10k</span>
+
+                  <li class="latter-compositions-icons">
+                    <svg class="icon">
+                      <use
+                        href="img/svg/SVG-sprite.svg#valentines-heart"
+                        xlink:href="img/svg/SVG-sprite.svg#valentines-heart"
+                      ></use>
+                    </svg>
+                    <span class="icons-heart-descr">10k</span>
                   </li>
-                  <li class="latter-compositions-icons icons-options">
-                    <a href="#"></a> <span class="icons-options-descr">3k</span>
+
+                  <li class="latter-compositions-icons">
+                    <svg class="icon">
+                      <use
+                        href="img/svg/SVG-sprite.svg#share"
+                        xlink:href="img/svg/SVG-sprite.svg#share"
+                      ></use>
+                    </svg>
+                    <span class="icons-options-descr">3k</span>
                   </li>
-                  <li class="latter-compositions-icons icons-speech">
-                    <a href="#"></a> <span class="icons-speech-descr">96</span>
+
+                  <li class="latter-compositions-icons">
+                    <svg class="icon">
+                      <use
+                        href="img/svg/SVG-sprite.svg#chat"
+                        xlink:href="img/svg/SVG-sprite.svg#chat"
+                      ></use>
+                    </svg>
+                    <span class="icons-speech-descr">96</span>
                   </li>
                 </ul>
               </div>
@@ -218,21 +260,51 @@
               </p>
               <div class="latter-button-icons">
                 <button class="latter-compositions-button">
-                  Visit the iTunes
+                  <span>Visit the iTunes</span>
+                  <svg class="button-icon">
+                    <use
+                      href="img/svg/SVG-sprite.svg#right-chevron"
+                      xlink:href="img/svg/SVG-sprite.svg#right-chevron"
+                    ></use>
+                  </svg>
                 </button>
-                <ul class="latter-compositions-icons list">
-                  <li class="latter-compositions-icons icons-audio">
-                    <a href="#"></a>
+
+                <ul class="latter-compositions-list">
+                  <li class="latter-compositions-icons">
+                    <svg class="icon">
+                      <use
+                        href="img/svg/SVG-sprite.svg#speaker"
+                        xlink:href="img/svg/SVG-sprite.svg#speaker"
+                      ></use>
+                    </svg>
                     <span class="icons-audio-descr">12,289</span>
                   </li>
-                  <li class="latter-compositions-icons icons-heart">
-                    <a href="#"></a> <span class="icons-heart-descr">8k</span>
+                  <li class="latter-compositions-icons">
+                    <svg class="icon">
+                      <use
+                        href="img/svg/SVG-sprite.svg#valentines-heart"
+                        xlink:href="img/svg/SVG-sprite.svg#valentines-heart"
+                      ></use>
+                    </svg>
+                    <span class="icons-heart-descr">8k</span>
                   </li>
-                  <li class="latter-compositions-icons icons-options">
-                    <a href="#"></a> <span class="icons-options-descr">1k</span>
+                  <li class="latter-compositions-icons">
+                    <svg class="icon">
+                      <use
+                        href="img/svg/SVG-sprite.svg#share"
+                        xlink:href="img/svg/SVG-sprite.svg#share"
+                      ></use>
+                    </svg>
+                    <span class="icons-options-descr">1k</span>
                   </li>
-                  <li class="latter-compositions-icons icons-speech">
-                    <a href="#"></a> <span class="icons-speech-descr">23</span>
+                  <li class="latter-compositions-icons">
+                    <svg class="icon">
+                      <use
+                        href="img/svg/SVG-sprite.svg#chat"
+                        xlink:href="img/svg/SVG-sprite.svg#chat"
+                      ></use>
+                    </svg>
+                    <span class="icons-speech-descr">23</span>
                   </li>
                 </ul>
               </div>
@@ -255,21 +327,51 @@
               </p>
               <div class="latter-button-icons">
                 <button class="latter-compositions-button">
-                  Visit the iTunes
+                  <span>Visit the iTunes</span>
+                  <svg class="button-icon">
+                    <use
+                      href="img/svg/SVG-sprite.svg#right-chevron"
+                      xlink:href="img/svg/SVG-sprite.svg#right-chevron"
+                    ></use>
+                  </svg>
                 </button>
-                <ul class="latter-compositions-icons list">
-                  <li class="latter-compositions-icons icons-audio">
-                    <a href="#"></a>
+
+                <ul class="latter-compositions-list">
+                  <li class="latter-compositions-icons">
+                    <svg class="icon">
+                      <use
+                        href="img/svg/SVG-sprite.svg#speaker"
+                        xlink:href="img/svg/SVG-sprite.svg#speaker"
+                      ></use>
+                    </svg>
                     <span class="icons-audio-descr">182,364</span>
                   </li>
-                  <li class="latter-compositions-icons icons-heart">
-                    <a href="#"></a> <span class="icons-heart-descr">10k</span>
+                  <li class="latter-compositions-icons">
+                    <svg class="icon">
+                      <use
+                        href="img/svg/SVG-sprite.svg#valentines-heart"
+                        xlink:href="img/svg/SVG-sprite.svg#valentines-heart"
+                      ></use>
+                    </svg>
+                    <span class="icons-heart-descr">10k</span>
                   </li>
-                  <li class="latter-compositions-icons icons-options">
-                    <a href="#"></a> <span class="icons-options-descr">3k</span>
+                  <li class="latter-compositions-icons">
+                    <svg class="icon">
+                      <use
+                        href="img/svg/SVG-sprite.svg#share"
+                        xlink:href="img/svg/SVG-sprite.svg#share"
+                      ></use>
+                    </svg>
+                    <span class="icons-options-descr">3k</span>
                   </li>
-                  <li class="latter-compositions-icons icons-speech">
-                    <a href="#"></a> <span class="icons-speech-descr">96</span>
+                  <li class="latter-compositions-icons">
+                    <svg class="icon">
+                      <use
+                        href="img/svg/SVG-sprite.svg#chat"
+                        xlink:href="img/svg/SVG-sprite.svg#chat"
+                      ></use>
+                    </svg>
+                    <span class="icons-speech-descr">96</span>
                   </li>
                 </ul>
               </div>
@@ -349,6 +451,27 @@
       <section class="lead-singer">
         <header class="lead-singer-slider container">
           <div class="slider-descr">
+            <div class="slider-icons">
+              <svg class="slider-icons-left">
+                <use
+                  href="img/svg/SVG-sprite.svg#bolt"
+                  xlink:href="img/svg/SVG-sprite.svg#bolt"
+                ></use>
+              </svg>
+              <svg class="slider-icons-music">
+                <use
+                  href="img/svg/SVG-sprite.svg#music"
+                  xlink:href="img/svg/SVG-sprite.svg#music"
+                ></use>
+              </svg>
+              <svg class="slider-icons-right">
+                <use
+                  href="img/svg/SVG-sprite.svg#bolt"
+                  xlink:href="img/svg/SVG-sprite.svg#bolt"
+                ></use>
+              </svg>
+            </div>
+
             <p class="lead-singer-about">
               In 2008, lead singer Dan Reynolds met <br />
               drummer Andrew Tolman at Brigham Young University where they were
@@ -361,6 +484,31 @@
               keys.
             </p>
             <p class="lead-singer-years">- Early years (2008–10)</p>
+
+            <!--
+              <div class="slider-icons-bottom">
+                <svg class="slider-icons-bottom circle">
+                  <use
+                    href="img/svg/SVG-sprite.svg#circle"
+                    xlink:href="img/svg/SVG-sprite.svg#circle"
+                  ></use>
+                </svg>
+
+                <svg class="slider-icons-bottom circle2">
+                  <use
+                    href="img/svg/SVG-sprite.svg#circle-1"
+                    xlink:href="img/svg/SVG-sprite.svg#circle-1"
+                  ></use>
+                </svg>
+
+                <svg class="slider-icons-bottom circle3">
+                  <use
+                    href="img/svg/SVG-sprite.svg#circle-1"
+                    xlink:href="img/svg/SVG-sprite.svg#circle-1"
+                  ></use>
+                </svg>
+              </div>
+            -->
           </div>
         </header>
         <ul class="lead-singer-songs list">
@@ -510,41 +658,40 @@
         <header class="contact-head">
           <h2 class="contact-title">Contact</h2>
           <p class="contact-text">
-            Canada Island, Division No. 23, Unorganized, MB, Canada 
+            Canada Island, Division No. 23, Unorganized, MB, Canada
           </p>
           <p class="contact-tel">Tel. +1(778)288 5180</p>
         </header>
-         <!-- --NEW FORM -->
-          <div class="contact-us-div">
-            <form class="contact-us-form" method="POST" id="user_form">
-              <div class="group">
-              <input type="text" id="name" autofocus required> 
-              <span class="bar"></span>
-              <label for="name">Name</label>
-              </div>
-              <div class="group">
-               <input type="email" id="email"  required>
-              <span class="bar"></span>
-              <label for="email">Email</label>
-              </div>
-              <div class="group">
-              <input type="text" id="message"  required> 
-              <span class="bar"></span>
-              <label for="message">Message</label>
-              </div>
-              <!--<textarea name="customer-message" placeholder="Your message *" required wrap="soft" form="user_request"></textarea> -->
-              <button type="submit">Send</button>
-            </form>
-             <div class="icons-form">
-              <ul class="icons-form-list">
-                <li class="icons-list-item icon-facebook"></li>
-                <li class="icons-list-item icon-instagram"></li>
-                <li class="icons-list-item icon-twitter"></li>
-              </ul>
+        <!-- --NEW FORM -->
+        <div class="contact-us-div">
+          <form class="contact-us-form" method="POST" id="user_form">
+            <div class="group">
+              <input type="text" id="name" required />
+              <span class="bar"></span> <label for="name">Name</label>
             </div>
+            <div class="group">
+              <input type="email" id="email" required />
+              <span class="bar"></span> <label for="email">Email</label>
+            </div>
+            <div class="group">
+              <input type="text" id="message" required />
+              <span class="bar"></span> <label for="message">Message</label>
+            </div>
+            <!--
+              <textarea name="customer-message" placeholder="Your message *" required wrap="soft" form="user_request"></textarea>
+            -->
+            <button type="submit">Send</button>
+          </form>
+          <div class="icons-form">
+            <ul class="icons-form-list">
+              <li class="icons-list-item icon-facebook"></li>
+              <li class="icons-list-item icon-instagram"></li>
+              <li class="icons-list-item icon-twitter"></li>
+            </ul>
           </div>
+        </div>
 
-          <!--
+        <!--
           <div class="signup">
             <form class="signup-form" action="">
               <ul class="signup-form-list">
@@ -580,8 +727,7 @@
               </ul>
             </div>
           </div>
-          -->
-
+        -->
       </section>
     </main>
   </body>
