шрифты, паддинги, маржины, подправил "слайдер"

--- a/src/index.html
+++ b/src/index.html
@@ -381,73 +381,6 @@
         </ul>
       </section>
 
-      <!--
-        <section class="slider">
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-          <h3></h3>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-          <p></p>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-          <p></p>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-        </section>
-      -->
-
       <section class="lead-singer">
         <header class="lead-singer-slider container">
           <div class="slider-descr">
@@ -484,31 +417,26 @@
               keys.
             </p>
             <p class="lead-singer-years">- Early years (2008–10)</p>
-
-            <!--
-              <div class="slider-icons-bottom">
-                <svg class="slider-icons-bottom circle">
+            <div class="slider-icons-bottom">
+                <svg class="circle">
                   <use
-                    href="img/svg/SVG-sprite.svg#circle"
-                    xlink:href="img/svg/SVG-sprite.svg#circle"
+                  href="img/svg/SVG-sprite.svg#circle-1"
+                  xlink:href="img/svg/SVG-sprite.svg#bolt"
                   ></use>
                 </svg>
-
-                <svg class="slider-icons-bottom circle2">
+                <svg class="circle">
                   <use
-                    href="img/svg/SVG-sprite.svg#circle-1"
-                    xlink:href="img/svg/SVG-sprite.svg#circle-1"
+                  href="img/svg/SVG-sprite.svg#circle"
+                  xlink:href="img/svg/SVG-sprite.svg#bolt"
                   ></use>
                 </svg>
-
-                <svg class="slider-icons-bottom circle3">
+                <svg class="circle">
                   <use
-                    href="img/svg/SVG-sprite.svg#circle-1"
-                    xlink:href="img/svg/SVG-sprite.svg#circle-1"
+                  href="img/svg/SVG-sprite.svg#circle"
+                  xlink:href="img/svg/SVG-sprite.svg#bolt"
                   ></use>
                 </svg>
-              </div>
-            -->
+            </div>
           </div>
         </header>
         <ul class="lead-singer-songs list">
@@ -654,7 +582,8 @@
           </p>
         </header>
       </section>
-      <section class="contact-section">
+
+      <section class="contact-section container">
         <header class="contact-head">
           <h2 class="contact-title">Contact</h2>
           <p class="contact-text">
