px=>rem, no width

--- a/src/index.html
+++ b/src/index.html
@@ -11,156 +11,165 @@
 
   <body>
     <header class="header-main">
-      <nav class="nav-head">
-        <div class="pre-menu">
-          <ul class="header-menu container">
-            <li class="header-menu-list">
-              <a class="header-menu-item" href="#about" target="_self">about</a>
+      <div class="container">
+        <nav class="nav-head">
+          <div class="pre-menu">
+            <ul class="header-menu">
+              <li class="header-menu-list">
+                <a class="header-menu-item" href="#about" target="_self"
+                  >about</a
+                >
+              </li>
+              <li class="header-menu-list">
+                <a class="header-menu-item" href="#discography" target="_self"
+                  >discigraphy</a
+                >
+              </li>
+              <li class="header-menu-list">
+                <a class="header-menu-item" href="#concert" target="_self"
+                  >concert trips</a
+                >
+              </li>
+              <li class="header-menu-list">
+                <a class="header-menu-item" href="#latter" target="_self"
+                  >latter compositions</a
+                >
+              </li>
+              <li class="header-menu-list">
+                <a class="header-menu-item" href="#new-track" target="_self"
+                  >new tracks</a
+                >
+              </li>
+              <li class="header-menu-list">
+                <a class="header-menu-item" href="#upcoming" target="_self"
+                  >upcoming events</a
+                >
+              </li>
+              <li class="header-menu-list">
+                <a class="header-menu-item" href="#history" target="_self"
+                  >history</a
+                >
+              </li>
+              <li class="header-menu-list">
+                <a class="header-menu-item" href="#contact" target="_self"
+                  >contact</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="logo container"></div>
+        </nav>
+      </div>
+    </header>
+    <main>
+      <section class="discography">
+        <div class="container">
+          <header class="">
+            <h2 class="discography-title title-h2">discography</h2>
+            <p class="discography-about">
+              September 4 world heard Night Visions, the first full album. He
+              reached the 2 position in the chart Billboard 200. The single
+              «It's Time» took 22 th place in the Billboard Hot 100, 4th in the
+              Billboard Alternative and Billboard Rock, and now went platinum.
+            </p>
+          </header>
+          <ul class="disco-list">
+            <li class="disco-list-item">
+              <span class="article-year">2010</span>
+              <h5 class="pre-title">Hell and Silence</h5>
+              <h3 class="article-title">
+                Hell and Silence is an EP by Las Vegas rock group
+              </h3>
+              <p class="article-text">
+                Hell and Silence is an EP by Las Vegas rock group , released in
+                March 2010 in the United States. It was recorded at Battle Born
+                Studios. All songs were written by Imagine Dragons and
+                self-produced. They also toured the western The EP was in part
+                mixed by Grammy nominated engineer Mark Needham. To promote the
+                album the band performed five shows at SXSW 2010 including at
+                the BMI Official Showcase.While at SXSW they were endorsed by
+                Blue Microphones. They also toured the western United States
+                with Nico Vega and Saint Motel. They also performed at Bite of
+                Las Vegas Festival 2010, New Noise Music Festival, Neon Reverb
+                Festival, and Fork Fest.
+              </p>
+              <button type="button" class="play disco01">play</button>
             </li>
-            <li class="header-menu-list">
-              <a class="header-menu-item" href="#discography" target="_self"
-                >discigraphy</a
-              >
+            <li class="disco-list-item">
+              <span class="article-year">2012</span>
+              <h5 class="pre-title">Night Visions</h5>
+              <h3 class="article-title">
+                Night Visions is the debut studio album by American rock band
+              </h3>
+              <p class="article-text">
+                It was released on September 4, 2012 through Interscope Records.
+                The extended track was released on February 12, 2013, adding
+                three more songs. Recorded between 2010 and 2012, the album was
+                primarily produced by the band themselves, as well as English
+                hip-hop producer Alex da Kid and Brandon Darner from the
+                American indie rock group The Envy Corps. It was mastered by Joe
+                LaPorta. According to frontman Dan Reynolds, the album took
+                three years to finish ...
+              </p>
+              <button type="button" class="play disco02">play</button>
             </li>
-            <li class="header-menu-list">
-              <a class="header-menu-item" href="#concert" target="_self"
-                >concert trips</a
-              >
-            </li>
-            <li class="header-menu-list">
-              <a class="header-menu-item" href="#latter" target="_self"
-                >latter compositions</a
-              >
-            </li>
-            <li class="header-menu-list">
-              <a class="header-menu-item" href="#new-track" target="_self"
-                >new tracks</a
-              >
-            </li>
-            <li class="header-menu-list">
-              <a class="header-menu-item" href="#upcoming" target="_self"
-                >upcoming events</a
-              >
-            </li>
-            <li class="header-menu-list">
-              <a class="header-menu-item" href="#history" target="_self"
-                >history</a
-              >
-            </li>
-            <li class="header-menu-list">
-              <a class="header-menu-item" href="#contact" target="_self"
-                >contact</a
-              >
+            <li class="">
+              <span class="article-year">2015</span>
+              <h5 class="pre-title">Smoke + Mirrors</h5>
+              <h3 class="article-title">
+                The album was recorded during 2014 at the band's home studio in
+                Las Vegas, Nevada
+              </h3>
+              <p class="article-text">
+                Self-produced by members of the band along with English hip-hop
+                producer Alexander Grant, known by his moniker Alex da Kid, the
+                album was released by Interscope Records and Grant's
+                KIDinaKORNER label on February 17, 2015, in the United States.
+              </p>
+              <button type="button" class="play disco03">play</button>
             </li>
           </ul>
         </div>
-        <div class="logo container"></div>
-      </nav>
-    </header>
-    <main>
-      <section class="discography container">
-        <header class="">
-          <h2 class="discography-title title-h2">discography</h2>
-          <p class="discography-about">
-            September 4 world heard Night Visions, the first full album. He
-            reached the 2 position in the chart Billboard 200. The single «It's
-            Time» took 22 th place in the Billboard Hot 100, 4th in the
-            Billboard Alternative and Billboard Rock, and now went platinum.
-          </p>
-        </header>
-        <ul class="disco-list">
-          <li class="disco-list-item">
-            <span class="article-year">2010</span>
-            <h5 class="pre-title">Hell and Silence</h5>
-            <h3 class="article-title">
-              Hell and Silence is an EP by Las Vegas rock group
-            </h3>
-            <p class="article-text">
-              Hell and Silence is an EP by Las Vegas rock group , released in
-              March 2010 in the United States. It was recorded at Battle Born
-              Studios. All songs were written by Imagine Dragons and
-              self-produced. They also toured the western The EP was in part
-              mixed by Grammy nominated engineer Mark Needham. To promote the
-              album the band performed five shows at SXSW 2010 including at the
-              BMI Official Showcase.While at SXSW they were endorsed by Blue
-              Microphones. They also toured the western United States with Nico
-              Vega and Saint Motel. They also performed at Bite of Las Vegas
-              Festival 2010, New Noise Music Festival, Neon Reverb Festival, and
-              Fork Fest.
-            </p>
-            <button type="button" class="play disco01">play</button>
-          </li>
-          <li class="disco-list-item">
-            <span class="article-year">2012</span>
-            <h5 class="pre-title">Night Visions</h5>
-            <h3 class="article-title">
-              Night Visions is the debut studio album by American rock band
-            </h3>
-            <p class="article-text">
-              It was released on September 4, 2012 through Interscope Records.
-              The extended track was released on February 12, 2013, adding three
-              more songs. Recorded between 2010 and 2012, the album was
-              primarily produced by the band themselves, as well as English
-              hip-hop producer Alex da Kid and Brandon Darner from the American
-              indie rock group The Envy Corps. It was mastered by Joe LaPorta.
-              According to frontman Dan Reynolds, the album took three years to
-              finish ...
-            </p>
-            <button type="button" class="play disco02">play</button>
-          </li>
-          <li class="">
-            <span class="article-year">2015</span>
-            <h5 class="pre-title">Smoke + Mirrors</h5>
-            <h3 class="article-title">
-              The album was recorded during 2014 at the band's home studio in
-              Las Vegas, Nevada
-            </h3>
-            <p class="article-text">
-              Self-produced by members of the band along with English hip-hop
-              producer Alexander Grant, known by his moniker Alex da Kid, the
-              album was released by Interscope Records and Grant's KIDinaKORNER
-              label on February 17, 2015, in the United States.
-            </p>
-            <button type="button" class="play disco03">play</button>
-          </li>
-        </ul>
       </section>
 
-      <section class="concert-tours container">
-        <header class="concert-tours-head">
-          <h2 class="concert-tours-title title-h2">Concert Tours</h2>
-          <p class="concert-tours-about">
-            Before the release of Night Visions, Imagine Dragons made
-            appearances on American radio and television to promote their
-            extended play, Continued Silence and debut single It's Time. The
-            band performed "It's Time" on the July 16, 2012 airing of NBC
-            late-night talk show The Tonight Show with Jay Leno"
-          </p>
-        </header>
-        <div class="half-container">
-          <span class="article-year">03.08.2015</span>
-          <h5 class="pre-title concert-tours-smoke">Smoke + Mirrors Tour</h5>
-          <h4 class="article-title">2015-present</h4>
-          <p class="article-text">
-            At Lollapalooza in Sao Paulo, Brazil, the last date on the Into the
-            Night Tour, the band announced a rest, and complemented saying,
-            "This is our last show for a while, and had no better place to end
-            this tour".The conclusion of the Into the Night Tour signaled the
-            end of the Night Visions album cycle. Lead singer Dan Reynolds joked
-            about the end of the Night Visions cycle, saying that "We're always
-            writing on the road, [so] that second album will come, unless we
-            die. next year. Hopefully we don't die and there will be a second
-            album. I don't know when it will be, but it may come"
-          </p>
-          <a class="buy-online" href="#">
-            <span>Buy online</span>
-            <svg class="button-icon">
-              <use
-                href="img/svg/SVG-sprite.svg#right-chevron"
-                xlink:href="img/svg/SVG-sprite.svg#right-chevron"
-              ></use>
-            </svg>
-          </a>
+      <section class="concert-tours">
+        <div class="container">
+          <header class="concert-tours-head">
+            <h2 class="concert-tours-title title-h2">Concert Tours</h2>
+            <p class="concert-tours-about">
+              Before the release of Night Visions, Imagine Dragons made
+              appearances on American radio and television to promote their
+              extended play, Continued Silence and debut single It's Time. The
+              band performed "It's Time" on the July 16, 2012 airing of NBC
+              late-night talk show The Tonight Show with Jay Leno"
+            </p>
+          </header>
+          <div class="half-container">
+            <span class="article-year">03.08.2015</span>
+            <h5 class="pre-title concert-tours-smoke">Smoke + Mirrors Tour</h5>
+            <h4 class="article-title">2015-present</h4>
+            <p class="article-text">
+              At Lollapalooza in Sao Paulo, Brazil, the last date on the Into
+              the Night Tour, the band announced a rest, and complemented
+              saying, "This is our last show for a while, and had no better
+              place to end this tour".The conclusion of the Into the Night Tour
+              signaled the end of the Night Visions album cycle. Lead singer Dan
+              Reynolds joked about the end of the Night Visions cycle, saying
+              that "We're always writing on the road, [so] that second album
+              will come, unless we die. next year. Hopefully we don't die and
+              there will be a second album. I don't know when it will be, but it
+              may come"
+            </p>
+            <a class="buy-online" href="#">
+              <span>Buy online</span>
+              <svg class="button-icon">
+                <use
+                  href="img/svg/SVG-sprite.svg#right-chevron"
+                  xlink:href="img/svg/SVG-sprite.svg#right-chevron">
+                </use>
+              </svg>
+            </a>
+          </div>
         </div>
       </section>
 
@@ -243,7 +252,7 @@
                 </ul>
               </div>
             </div>
-            <img src="img/latter01.jpg" alt="" />
+            <img src="img/latter01.jpg" alt="latter01" />
           </li>
           <li class="latter-compositions-item">
             <div class="latter-compositions-wrapper">
@@ -309,7 +318,7 @@
                 </ul>
               </div>
             </div>
-            <img src="img/latter02.jpg" alt="" />
+            <img src="img/latter02.jpg" alt="latter02" />
           </li>
 
           <li class="latter-compositions-item">
@@ -376,7 +385,7 @@
                 </ul>
               </div>
             </div>
-            <img src="img/latter03.jpg" alt="" />
+            <img src="img/latter03.jpg" alt="latter-03" />
           </li>
         </ul>
       </section>
@@ -418,28 +427,28 @@
             </p>
             <p class="lead-singer-years">- Early years (2008–10)</p>
             <div class="slider-icons-bottom">
-                <svg class="circle">
-                  <use
+              <svg class="circle">
+                <use
                   href="img/svg/SVG-sprite.svg#circle-1"
                   xlink:href="img/svg/SVG-sprite.svg#bolt"
-                  ></use>
-                </svg>
-                <svg class="circle">
-                  <use
+                ></use>
+              </svg>
+              <svg class="circle">
+                <use
                   href="img/svg/SVG-sprite.svg#circle"
                   xlink:href="img/svg/SVG-sprite.svg#bolt"
-                  ></use>
-                </svg>
-                <svg class="circle">
-                  <use
+                ></use>
+              </svg>
+              <svg class="circle">
+                <use
                   href="img/svg/SVG-sprite.svg#circle"
                   xlink:href="img/svg/SVG-sprite.svg#bolt"
-                  ></use>
-                </svg>
+                ></use>
+              </svg>
             </div>
           </div>
         </header>
-        <ul class="lead-singer-songs list">
+        <ul class="lead-singer-songs container list">
           <li class="lead-singer-item">
             <img
               class="lead-singer-image"
