digitals fis added

--- a/src/index.html
+++ b/src/index.html
@@ -450,7 +450,7 @@
           </div>
         </header>
         <ul class="lead-singer-songs container list">
-          <li class="lead-singer-item">
+          <li class="lead-singer-item digital_one">
 
             <img
               class="lead-singer-image"
@@ -475,7 +475,7 @@
             </div>
           </li>
 
-          <li class="lead-singer-item">
+          <li class="lead-singer-item digital_two">
             <img src="img/newtrack02.jpg" alt="" width="384" height="422" />
             <div class="lead-singer-wrapper">
               <span class="lead-singer-date">01.03.2015</span>
@@ -489,7 +489,7 @@
             </div>
           </li>
 
-          <li class="lead-singer-item">
+          <li class="lead-singer-item digital_three">
             <img src="img/newtrack03.jpg" alt="" width="384" height="422" />
             <div class="lead-singer-wrapper">
               <span class="lead-singer-date">04.04.2015</span>
@@ -503,7 +503,7 @@
             </div>
           </li>
 
-          <li class="lead-singer-item">
+          <li class="lead-singer-item digital_four">
             <img src="img/newtrack04.jpg" alt="" width="384" height="422" />
             <div class="lead-singer-wrapper">
               <span class="lead-singer-date">01.07.2015</span>
@@ -517,7 +517,7 @@
             </div>
           </li>
 
-          <li class="lead-singer-item">
+          <li class="lead-singer-item digital_five">
             <img src="img/newtrack05.jpg" alt="" width="384" height="422" />
             <div class="lead-singer-wrapper">
               <span class="lead-singer-date">02.11.2015</span>
@@ -532,7 +532,7 @@
             </div>
           </li>
 
-          <li class="lead-singer-item">
+          <li class="lead-singer-item digital_six">
             <img src="img/newtrack06.jpg" alt="" width="384" height="422" />
             <div class="lead-singer-wrapper">
               <span class="lead-singer-date">06.09.2015</span>
