--- a/src/index.html
+++ b/src/index.html
@@ -594,7 +594,7 @@
         </header>
       </section>
 
-      <section class="contact-section container">
+      <section class="contact-section">
         <header class="contact-head">
           <h2 class="contact-title">Contact</h2>
           <p class="contact-text">
