some prettier fixes

--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,6 @@
                 <a class="header-menu-item" href="#history" target="_self"
                   >history</a
                 >
-
               </li>
               <li class="header-menu-list">
                 <a class="header-menu-item" href="#contact" target="_self"
@@ -94,7 +93,7 @@
                 Las Vegas Festival 2010, New Noise Music Festival, Neon Reverb
                 Festival, and Fork Fest.
               </p>
-   <button type="button" class="play disco01">play</button>
+              <button type="button" class="play disco01">play</button>
             </li>
             <li class="disco-list-item">
               <span class="article-year">2012</span>
@@ -166,8 +165,8 @@
               <svg class="button-icon">
                 <use
                   href="img/svg/SVG-sprite.svg#right-chevron"
-                  xlink:href="img/svg/SVG-sprite.svg#right-chevron">
-                </use>
+                  xlink:href="img/svg/SVG-sprite.svg#right-chevron"
+                ></use>
               </svg>
             </a>
           </div>
@@ -451,7 +450,6 @@
         </header>
         <ul class="lead-singer-songs container list">
           <li class="lead-singer-item digital_one">
-
             <img
               class="lead-singer-image"
               src="img/newtrack01.jpg"
@@ -546,9 +544,10 @@
           </li>
         </ul>
       </section>
+
       <section class="upcoming">
-        <header class="upcoming-head">
-          <h2 class="upcoming-title">Upcoming Events</h2>
+        <header class="upcoming-head container">
+          <h2 class="upcoming-title title-h2">Upcoming Events</h2>
           <h3 class="upcoming-item">Smoke + Mirrors Tour</h3>
           <p class="upcoming-adress">
             2-2-15 Hokukoryokuchi, Konohana Ward,<br />
@@ -571,7 +570,7 @@
 
       <section class="history">
         <header class="history-head">
-          <h2 class="history-title">History</h2>
+          <h2 class="history-title title-h2">History</h2>
           <p class="history-text">
             In 2008, lead singer Dan Reynolds met drummer Andrew Tolman at<br />
             Brigham Young University where they were both students.Tolman
@@ -596,12 +595,13 @@
 
       <section class="contact-section">
         <header class="contact-head">
-          <h2 class="contact-title">Contact</h2>
+          <h2 class="contact-title title-h2">Contact</h2>
           <p class="contact-text">
             Canada Island, Division No. 23, Unorganized, MB, Canada
           </p>
           <p class="contact-tel">Tel. +1(778)288 5180</p>
         </header>
+
         <!-- --NEW FORM -->
         <div class="contact-us-div">
           <form class="contact-us-form" method="POST" id="user_form">
