--- a/src/index.html
+++ b/src/index.html
@@ -49,6 +49,7 @@
                 <a class="header-menu-item" href="#history" target="_self"
                   >history</a
                 >
+
               </li>
               <li class="header-menu-list">
                 <a class="header-menu-item" href="#contact" target="_self"
@@ -93,7 +94,7 @@
                 Las Vegas Festival 2010, New Noise Music Festival, Neon Reverb
                 Festival, and Fork Fest.
               </p>
-              <button type="button" class="play disco01">play</button>
+   <button type="button" class="play disco01">play</button>
             </li>
             <li class="disco-list-item">
               <span class="article-year">2012</span>
@@ -165,8 +166,8 @@
               <svg class="button-icon">
                 <use
                   href="img/svg/SVG-sprite.svg#right-chevron"
-                  xlink:href="img/svg/SVG-sprite.svg#right-chevron"
-                ></use>
+                  xlink:href="img/svg/SVG-sprite.svg#right-chevron">
+                </use>
               </svg>
             </a>
           </div>
@@ -430,19 +431,19 @@
               <svg class="circle">
                 <use
                   href="img/svg/SVG-sprite.svg#circle-1"
-                  xlink:href="img/svg/SVG-sprite.svg#circle-1"
+                  xlink:href="img/svg/SVG-sprite.svg#bolt"
                 ></use>
               </svg>
               <svg class="circle">
                 <use
                   href="img/svg/SVG-sprite.svg#circle"
-                  xlink:href="img/svg/SVG-sprite.svg#circle"
+                  xlink:href="img/svg/SVG-sprite.svg#bolt"
                 ></use>
               </svg>
               <svg class="circle">
                 <use
                   href="img/svg/SVG-sprite.svg#circle"
-                  xlink:href="img/svg/SVG-sprite.svg#circle"
+                  xlink:href="img/svg/SVG-sprite.svg#bolt"
                 ></use>
               </svg>
             </div>
@@ -450,6 +451,7 @@
         </header>
         <ul class="lead-singer-songs container list">
           <li class="lead-singer-item digital_one">
+
             <img
               class="lead-singer-image"
               src="img/newtrack01.jpg"
@@ -544,10 +546,9 @@
           </li>
         </ul>
       </section>
-
       <section class="upcoming">
-        <header class="upcoming-head container">
-          <h2 class="upcoming-title title-h2">Upcoming Events</h2>
+        <header class="upcoming-head">
+          <h2 class="upcoming-title">Upcoming Events</h2>
           <h3 class="upcoming-item">Smoke + Mirrors Tour</h3>
           <p class="upcoming-adress">
             2-2-15 Hokukoryokuchi, Konohana Ward,<br />
@@ -570,7 +571,7 @@
 
       <section class="history">
         <header class="history-head">
-          <h2 class="history-title title-h2">History</h2>
+          <h2 class="history-title">History</h2>
           <p class="history-text">
             In 2008, lead singer Dan Reynolds met drummer Andrew Tolman at<br />
             Brigham Young University where they were both students.Tolman
@@ -595,13 +596,12 @@
 
       <section class="contact-section">
         <header class="contact-head">
-          <h2 class="contact-title title-h2">Contact</h2>
+          <h2 class="contact-title">Contact</h2>
           <p class="contact-text">
             Canada Island, Division No. 23, Unorganized, MB, Canada
           </p>
           <p class="contact-tel">Tel. +1(778)288 5180</p>
         </header>
-
         <!-- --NEW FORM -->
         <div class="contact-us-div">
           <form class="contact-us-form" method="POST" id="user_form">
@@ -623,34 +623,35 @@
             <button type="submit">Send</button>
           </form>
           <div class="icons-form">
-            <ul class="icons-form-list">
-              <li class="icons-list-item">
-                <svg class="icons-form-facebook">
-                  <use
-                    href="img/svg/SVG-sprite.svg#facebook-letter-logo"
-                    xlink:href="img/svg/SVG-sprite.svg#facebook-letter-logo"
-                  ></use>
-                </svg>
-              </li>
-              <li class="icons-list-item">
-                <svg class="icons-form-instagram">
-                  <use
-                    href="img/svg/SVG-sprite.svg#social-media"
-                    xlink:href="img/svg/SVG-sprite.svg#social-media"
-                  ></use>
-                </svg>
-              </li>
-              <li class="icons-list-item">
-                <svg class="icons-form-twitter">
-                  <use
-                    href="img/svg/SVG-sprite.svg#tweet"
-                    xlink:href="img/svg/SVG-sprite.svg#tweet"
-                  ></use>
-                </svg>
-              </li>
-            </ul>
-          </div>
-        </div>
+              <ul class="icons-form-list">
+                <li class="icons-list-item">
+                  <svg class="icons-form-facebook">
+                    <use
+                      href="img/svg/SVG-sprite.svg#facebook-letter-logo"
+                      xlink:href="img/svg/SVG-sprite.svg#facebook-letter-logo"
+                    ></use>
+                  </svg>
+                </li>
+                <li class="icons-list-item">
+                  <svg class="icons-form-instagram">
+                    <use
+                      href="img/svg/SVG-sprite.svg#social-media"
+                      xlink:href="img/svg/SVG-sprite.svg#social-media"
+                    ></use>
+                  </svg>
+                </li>
+                <li class="icons-list-item">
+                  <svg class="icons-form-twitter">
+                    <use
+                      href="img/svg/SVG-sprite.svg#tweet"
+                      xlink:href="img/svg/SVG-sprite.svg#tweet"
+                    ></use>
+                  </svg>
+                </li>
+              </ul>
+            </div>
+            </div>
+        
 
         <!--
           <div class="signup">
